--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </a></head>
 <body>
     
-
-Age verifier
+<h1>Age Verifier</h1>
+<h2>demo</h2>
 
     <script src="app.js"></script>
 </body>
