--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </a></head>
 <body>
     
-<h1>Age Verifier</h1>
+<h1>Age Verifier !</h1>
 <h2>demo</h2>
 
     <script src="app.js"></script>
